<resources>
    <string name="app_name">Food</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_popup">   Eat It Restaurant</string>
    <string name="menu_home">Trang chủ</string>
    <string name="menu_favourite">Món yêu thích</string>
    <string name="menu_history">Lịch sử đặt món</string>
    <string name="menu_info">Thông tin cá nhân</string>
    <string name="menu_changpass">Đổi mật khẩu</string>
    <string name="menu_logout">Đăng xuất</string>
    <string name="title_activity_list_item">ListItem</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu_item">MenuItem</string>
</resources>
