<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
<!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/favou"-->
<!--            android:title="@string/menu_favourite" />-->
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/medical_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/lock"
            android:title="@string/menu_changpass" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>





</menu>
